--- a/旋转木马轮播图/index.html
+++ b/旋转木马轮播图/index.html
@@ -3,11 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>旋转木马轮播图</title>
-    <link rel="stylesheet" href="css/css.css"/>
-    <!--<script type="text/javascript" src="js/JQuery1.0.0.2.js"></script>-->
-    <!--<script type="text/javascript" src="js/index.js"></script>-->
+    <link rel="stylesheet" href="css/index.css"/>
     <script src="js/jquery.min.js"></script>
-    <script src="js/index_jq.js"></script>
+    <script src="js/carousel.js"></script>
+    <script type="text/javascript">
+      $(function(){
+        $("#wrap").carousel();
+      })
+    </script>
 </head>
 <body>
 <div class="wrap" id="wrap">
