--- a/JDShop/picker.html
+++ b/JDShop/picker.html
@@ -399,6 +399,9 @@
                  });*/
                 $('#hasJDaddress').addClass("mui-active");
             }, false);
+            $("#hasJDaddress i").on('tap', function () {
+                $('#hasJDaddress').removeClass("mui-active");
+            })
         });
     })
 
