--- a/JDShop/dialog.html
+++ b/JDShop/dialog.html
@@ -9,12 +9,235 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 		<!--标准mui.css-->
-		<link rel="stylesheet" href="css/mui.min.css">
+		<!--<link rel="stylesheet" href="css/mui.min.css">-->
 		<!--App自定义的css-->
 		<style>
-			.mui-popup-button {
-				color: #33c774;
+			* {
+				padding: 0;
+				margin: 0;
 			}
+            .mui-popup {
+
+            }
+            .mui-popup-title {
+
+
+            }
+            .mui-popup-title+.mui-popup-text {
+
+            }
+            .mui-popup-text ul {
+                list-style: none;
+            }
+            .mui-popup-button {
+
+            }
+
+
+
+			.mui-popup-backdrop {
+				position: fixed;
+				z-index: 998;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				-webkit-transition-duration: 400ms;
+				transition-duration: 400ms;
+				opacity: 0;
+				background: rgba(0, 0, 0, .4)
+			}
+
+			.mui-popup-backdrop.mui-active {
+				opacity: 1
+			}
+
+			.mui-popup {
+				position: fixed;
+				z-index: 10000;
+				top: 50%;
+				left: 50%;
+				display: none;
+				overflow: hidden;
+				width: 270px;
+				-webkit-transition-property: -webkit-transform, opacity;
+				transition-property: transform, opacity;
+				-webkit-transform: translate3d(-50%, -50%, 0) scale(1.185);
+				transform: translate3d(-50%, -50%, 0) scale(1.185);
+				text-align: center;
+				opacity: 0;
+				color: #000;
+				border-radius: 13px;
+                font-family: PingFangSC-Regular;
+                letter-spacing: 0;
+			}
+
+			.mui-popup.mui-popup-in {
+				display: block;
+				-webkit-transition-duration: 400ms;
+				transition-duration: 400ms;
+				-webkit-transform: translate3d(-50%, -50%, 0) scale(1);
+				transform: translate3d(-50%, -50%, 0) scale(1);
+				opacity: 1
+			}
+
+			.mui-popup.mui-popup-out {
+				-webkit-transition-duration: 400ms;
+				transition-duration: 400ms;
+				-webkit-transform: translate3d(-50%, -50%, 0) scale(1);
+				transform: translate3d(-50%, -50%, 0) scale(1);
+				opacity: 0
+			}
+
+			.mui-popup-inner {
+				position: relative;
+				padding: 15px;
+				border-radius: 13px 13px 0 0;
+				background: rgba(255, 255, 255, .95)
+			}
+
+			.mui-popup-inner:after {
+				position: absolute;
+				z-index: 15;
+				top: auto;
+				right: auto;
+				bottom: 0;
+				left: 0;
+				display: block;
+				width: 100%;
+				height: 1px;
+				content: '';
+				-webkit-transform: scaleY(.5);
+				transform: scaleY(.5);
+				-webkit-transform-origin: 50% 100%;
+				transform-origin: 50% 100%;
+				background-color: rgba(0, 0, 0, .2)
+			}
+
+			.mui-popup-title {
+				text-align: center;
+                font-size: 14px;
+                color: #030303;
+                line-height: 20px;
+                font-weight: bold;
+			}
+
+			.mui-popup-title + .mui-popup-text {
+				margin: 5px 0 0;
+                font-size: 14px;
+                color: #333333;
+                line-height: 20px;
+                max-height: 300px;
+                overflow-y: auto;
+			}
+
+			.mui-popup-buttons {
+				position: relative;
+				display: -webkit-box;
+				display: -webkit-flex;
+				display: flex;
+				height: 44px;
+				-webkit-box-pack: center;
+				-webkit-justify-content: center;
+				justify-content: center
+			}
+
+			.mui-popup-button {
+				line-height: 44px;
+				position: relative;
+				display: block;
+				overflow: hidden;
+				box-sizing: border-box;
+				width: 100%;
+				height: 44px;
+				padding: 0 5px;
+				cursor: pointer;
+				text-align: center;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				color: #007aff;
+				background: rgba(255, 255, 255, .95);
+				-webkit-box-flex: 1;
+                font-size: 17px;
+                color: #33C774;
+                letter-spacing: -0.41px;
+			}
+
+			.mui-popup-button:after {
+				position: absolute;
+				z-index: 15;
+				top: 0;
+				right: 0;
+				bottom: auto;
+				left: auto;
+				display: block;
+				width: 1px;
+				height: 100%;
+				content: '';
+				-webkit-transform: scaleX(.5);
+				transform: scaleX(.5);
+				-webkit-transform-origin: 100% 50%;
+				transform-origin: 100% 50%;
+				background-color: rgba(0, 0, 0, .2)
+			}
+
+			.mui-popup-button:first-child {
+				border-radius: 0 0 0 13px
+			}
+
+			.mui-popup-button:first-child:last-child {
+				border-radius: 0 0 13px 13px
+			}
+
+			.mui-popup-button:last-child {
+				border-radius: 0 0 13px
+			}
+
+			.mui-popup-button:last-child:after {
+				display: none
+			}
+
+			.mui-popup-button.mui-popup-button-bold {
+				font-weight: 600
+			}
+
+			.mui-popup-input input {
+				font-size: 14px;
+				width: 100%;
+				height: 26px;
+				margin: 15px 0 0;
+				padding: 0 5px;
+				border: 1px solid rgba(0, 0, 0, .3);
+				border-radius: 0;
+				background: #fff
+			}
+
+			.mui-plus.mui-android .mui-popup-backdrop {
+				-webkit-transition-duration: 1ms;
+				transition-duration: 1ms
+			}
+
+			.mui-plus.mui-android .mui-popup {
+				-webkit-transition-duration: 1ms;
+				transition-duration: 1ms;
+				-webkit-transform: translate3d(-50%, -50%, 0) scale(1);
+				transform: translate3d(-50%, -50%, 0) scale(1)
+			}
+
+            .nogoods-btn {
+                background: #EEEEEE;
+                position: relative;
+            }
+            .nogoods-btn::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                z-index: 1000;
+            }
+
 		</style>
 
 	</head>
@@ -28,6 +251,7 @@
 
 				</div>
 			</div>
+
 		</div>
 		<script src="js/mui.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
@@ -37,13 +261,23 @@
 			});
 			var info = document.getElementById("info");
 			document.getElementById("alertBtn").addEventListener('tap', function() {
-				mui.alert('你在商品浏览过程中所选择的配送地址与当前收货地址不同，是否去新建一个收货地址。你在商品浏览过程中所选择的配送地址与当前收货地址不同，是否去新建一个收货地址。你在商品浏览过程中所选择的配送地址与当前收货地址不同，是否去新建一个收货地址。你在商品浏览过程中所选择的配送地址与当前收货地址不同，是否去新建一个收货地址。', ' ', function() {
+				mui.alert('', '你在商品浏览过程中所选择的配送地址与当前收货地址不同，是否去新建一个收货地址。', function() {
 					info.innerText = '你刚关闭了警告框';
 				});
 			});
 			document.getElementById("confirmBtn").addEventListener('tap', function() {
 				var btnArray = ['取消', '新建'];
-				mui.confirm('你在商品浏览过程中所选择的配送地址与当前收货地址不同，是否去新建一个收货地址。', '你修改了配送地址，是否切换？', btnArray, function(e) {
+				var popupText ='<ul>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				<li>VENUM ELITE BOXING GLOVES毒液正品“精英”拳击手套散打大事发生发噶啊…</li>\
+				</ul>';
+				mui.confirm(popupText, '你修改了配送地址，是否切换？', btnArray, function(e) {
 					if (e.index == 1) {
 						info.innerText = '确认';
 					} else {
